[gd_scene load_steps=5 format=3 uid="uid://bykmj3v0gofwe"]

[ext_resource type="Script" path="res://menu/HUD.gd" id="1_yp6hk"]
[ext_resource type="FontFile" uid="uid://b5hve76h7ondq" path="res://fonts/Xolonium-Regular.ttf" id="2_u71yk"]

[sub_resource type="InputEventAction" id="InputEventAction_y1vsx"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8m8r6"]
events = [SubResource("InputEventAction_y1vsx")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_yp6hk")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_u71yk")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -79.5
offset_right = 205.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_u71yk")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -140.0
offset_right = 88.5
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_u71yk")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8m8r6")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HelpLabel1" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -954.0
offset_top = -6.0
offset_right = -401.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_u71yk")
theme_override_font_sizes/font_size = 64
text = "Dash using Shift
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
